--- a/public/webgl/index.html
+++ b/public/webgl/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | Add Force 1</title>
+    <title>Unity Web Player | street for promotion</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=800 height=400 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Add Force 1</div>
+        <div id="unity-build-title">street for promotion</div>
       </div>
     </div>
     <script>
@@ -59,9 +59,9 @@
         frameworkUrl: buildUrl + "/z_web.framework.js.gz",
         codeUrl: buildUrl + "/z_web.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "PTO",
-        productName: "Add Force 1",
-        productVersion: "28",
+        companyName: "SIDNFT",
+        productName: "street for promotion",
+        productVersion: "1",
         showBanner: unityShowBanner,
       };
 
@@ -98,8 +98,8 @@
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "800px";
-        canvas.style.height = "400px";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
 
       document.querySelector("#unity-loading-bar").style.display = "block";
