--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,13 @@
       <hr />
       <h3>
         br compress (20MB) -
-        <a href="/webgl_3br/index.html"> ENTER </a>
+        <a href="/webgl_4br/index.html"> ENTER </a>
       </h3>
-      <div>- ios is not support yet</div>
+      <div>v4 - 04 /13 / 2025</div>
+      <ol>
+        <li>fix ios browser loading<</li>
+      </ol>
+
       <br />
       <br />
 
