--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <main>
-      <h1>street for promotion - v3</h1>
+      <h1>street for promotion</h1>
       <br />
       <br />
 
       <hr />
       <h3>
         br compress (20MB) -
-        <a href="/webgl_4br/index.html"> ENTER </a>
+        <a href="/webgl_4_1_br/index.html"> ENTER </a>
       </h3>
       <div>v4 - 04 /13 / 2025</div>
       <ol>
