--- a/public/index.html
+++ b/public/index.html
@@ -4,45 +4,49 @@
       name="google-site-verification"
       content="5Nsl2i3DsdySBbv14vwTPN0nAOSl4DgZR-Uyumv4H_E"
     />
-    <title>SIDNFT's unity web proejct</title>
+    <title>SIDNFT's Web Game Demo</title>
   </head>
   <body>
     <main>
-      <h1>street for promotion</h1>
+      <h1>SIDNFT's Web Game Demo</h1>
+
+      <hr />
+      <h2>Street Project Demo</h2>
+      <div>
+        Unity Play - [
+        <a
+          href="https://play.unity.com/en/user/5ea53514-df56-4e49-9931-a08d1813a7cc"
+        >
+          link
+        </a>
+        ]
+      </div>
       <br />
       <br />
 
       <hr />
-      <h3>
-        br compress (20MB) -
-        <a href="/webgl_4_3_br/index.html"> ENTER </a>
-      </h3>
-      <div>v4 - 04 /13 / 2025</div>
-      <ol>
-        <li>fix ios browser loading<</li>
-      </ol>
-
+      <h1>Multiplay Demo</h1>
+      <div>
+        [
+        <a href="/webgl_mp/index.html"> ENTER </a>
+        ]
+      </div>
       <br />
       <br />
-
-      <!-- <hr />
-      <h3>
-        gzip compress (39MB) -
-        <a href="/webgl_3gz/index.html"> ENTER </a>
-      </h3>
-      <div>- ios is not support yet</div>
-      <br />
-      <br /> -->
 
       <hr />
       <div>
-        BLOG -
+        BLOG (en) -
         <a
           target="_blank"
           href="https://addforce1.blogspot.com/search/label/webgl"
         >
           link
         </a>
+      </div>
+      <div>
+        BLOG (kr) -
+        <a target="_blank" href="https://blog.sidnft.com/tag/webgl"> link </a>
       </div>
     </main>
   </body>
