--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,14 @@
       <hr />
       <h2>Street Project Demo</h2>
       <div>
+        <img src="https://thisisone.github.io/street/app_icon.png" />
+      </div>
+      <div>
         Unity Play - [
         <a
           href="https://play.unity.com/en/user/5ea53514-df56-4e49-9931-a08d1813a7cc"
         >
-          link
+          LINK
         </a>
         ]
       </div>
@@ -26,6 +29,9 @@
 
       <hr />
       <h1>Multiplay Demo</h1>
+      <div>
+        <img src="https://thisisone.github.io/mp/app_icon.png" />
+      </div>
       <div>
         [
         <a href="/webgl_mp/index.html"> ENTER </a>
@@ -36,17 +42,19 @@
 
       <hr />
       <div>
-        BLOG (en) -
+        BLOG (en) - [
         <a
           target="_blank"
           href="https://addforce1.blogspot.com/search/label/webgl"
         >
-          link
+          LINK
         </a>
+        ]
       </div>
       <div>
-        BLOG (kr) -
-        <a target="_blank" href="https://blog.sidnft.com/tag/webgl"> link </a>
+        BLOG (kr) - [
+        <a target="_blank" href="https://blog.sidnft.com/tag/webgl"> LINK </a>
+        ]
       </div>
     </main>
   </body>
