--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
         </a>
         ]
       </div>
+      <div>
+        I'm sure there's no one here. <br />
+        Make sure to open several pages to multi-play
+      </div>
       <br />
       <br />
 
