--- a/public/index.html
+++ b/public/index.html
@@ -5,60 +5,111 @@
       content="5Nsl2i3DsdySBbv14vwTPN0nAOSl4DgZR-Uyumv4H_E"
     />
     <title>SIDNFT's Web Game Demo</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <main>
-      <h1>SIDNFT's Web Game Demo</h1>
+      <!-- header -->
+      <div>
+        <h1>SIDNFT's Web Game Demo</h1>
+      </div>
+
+      <!-- main -->
+      <hr />
+      <div class="tw_section">
+        <div>
+          <a
+            href="https://play.unity.com/en/games/c358842a-d246-4b01-bc3c-06ff7d066383/street-to-promote-v4"
+            target="_blank"
+          >
+            <img
+              class="tw_icon"
+              src="https://thisisone.github.io/street/app_icon.png"
+            />
+          </a>
+        </div>
+        <div class="tw_icon_desc">
+          <h3>Street Project</h3>
+          <div class="mt-2">
+            - Unity Web Build<br />
+
+            It is a project created to promote the app. It can interact with
+            various objects
+          </div>
+          <div class="mt-4">
+            <a
+              class="tw_button"
+              href="https://play.unity.com/en/games/c358842a-d246-4b01-bc3c-06ff7d066383/street-to-promote-v4"
+              target="_blank"
+            >
+              PLAY 🚀
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- footer -->
+      <hr />
+      <div class="tw_section">
+        <div>
+          <a
+            href="https://play.unity.com/en/games/ad4d2c84-f8bb-4c0e-9261-4703c1b9860d/sidnft-multiplay-tech-demo"
+            target="_blank"
+          >
+            <img
+              class="tw_icon"
+              src="https://thisisone.github.io/mp/app_icon.png"
+            />
+          </a>
+        </div>
+        <div class="tw_icon_desc">
+          <h3>Web Multiplay Tech Demo</h3>
+          <div class="mt-2">
+            - Unity Web Build<br />
+            - realtime online play<br />
+
+            A tech demo to see if online game development is possible on the<br />
+            I'm sure there's no one here. <br />
+            Make sure to open several pages to multi-play test
+          </div>
+          <div class="mt-4">
+            <a
+              class="tw_button"
+              href="https://play.unity.com/en/games/ad4d2c84-f8bb-4c0e-9261-4703c1b9860d/sidnft-multiplay-tech-demo"
+              target="_blank"
+            >
+              PLAY 🚀
+            </a>
+          </div>
+        </div>
+      </div>
 
       <hr />
-      <h2>Street Project Demo</h2>
-      <div>
-        <img src="https://thisisone.github.io/street/app_icon.png" />
-      </div>
-      <div>
-        Unity Play - [
-        <a
-          href="https://play.unity.com/en/user/5ea53514-df56-4e49-9931-a08d1813a7cc"
-        >
-          LINK
-        </a>
-        ]
-      </div>
-      <div>
-        I'm sure there's no one here. <br />
-        Make sure to open several pages to multi-play
-      </div>
-      <br />
-      <br />
-
-      <hr />
-      <h1>Multiplay Demo</h1>
-      <div>
-        <img src="https://thisisone.github.io/mp/app_icon.png" />
-      </div>
-      <div>
-        [
-        <a href="/webgl_mp/index.html"> ENTER </a>
-        ]
-      </div>
-      <br />
-      <br />
-
-      <hr />
-      <div>
-        BLOG (en) - [
-        <a
-          target="_blank"
-          href="https://addforce1.blogspot.com/search/label/webgl"
-        >
-          LINK
-        </a>
-        ]
-      </div>
-      <div>
-        BLOG (kr) - [
-        <a target="_blank" href="https://blog.sidnft.com/tag/webgl"> LINK </a>
-        ]
+      <div class="my-4 text-xs">
+        <div class="mt-2 flex items-center">
+          <div class="w-16 text-right">BLOG (en)</div>
+          <div class="ml-4">
+            <div class="px-4 rounded-full bg-indigo-600">
+              <a
+                href="https://addforce1.blogspot.com/search/label/webgl"
+                target="_blank"
+              >
+                LINK🔗
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="mt-2 flex items-center">
+          <div class="w-16 text-right">BLOG (kr)</div>
+          <div class="ml-4">
+            <div class="px-4 rounded-full bg-indigo-600">
+              <a href="https://blog.sidnft.com/tag/webgl" target="_blank">
+                LINK🔗
+              </a>
+            </div>
+          </div>
+          <div class="mt-2 flex items-center"></div>
+        </div>
       </div>
     </main>
   </body>
