--- a/public/webgl_mp/index.html
+++ b/public/webgl_mp/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Unity Web Player | street for promotion</title>
+    <title>Unity Web Player | Multiplay Tech Demo</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <link rel="stylesheet" href="TemplateData/style.css" />
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">street for promotion</div>
+        <div id="unity-build-title">Multiplay Tech Demo</div>
       </div>
     </div>
     <script>
@@ -63,7 +63,7 @@
         codeUrl: buildUrl + "/z_web.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SIDNFT",
-        productName: "street for promotion",
+        productName: "Multiplay Tech Demo",
         productVersion: "1",
         showBanner: unityShowBanner,
       };
