--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,19 @@
       name="google-site-verification"
       content="5Nsl2i3DsdySBbv14vwTPN0nAOSl4DgZR-Uyumv4H_E"
     />
-    <title>SIDNFT's Web Game Demo</title>
+    <title>SIDNFT | Unity Web playground</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <main>
       <!-- header -->
       <div>
-        <h1>SIDNFT's Web Game Demo</h1>
+        <h1>
+          <span class="px-2 py-2 rounded-2xl border-2 text-xl font-bold"
+            >SIDNFT</span
+          >
+          <span>Unity Web Tech Demo</span>
+        </h1>
       </div>
 
       <!-- main -->
