--- a/public/index.html
+++ b/public/index.html
@@ -4,116 +4,115 @@
       name="google-site-verification"
       content="5Nsl2i3DsdySBbv14vwTPN0nAOSl4DgZR-Uyumv4H_E"
     />
-    <title>SIDNFT | Unity Web playground</title>
+    <meta charset="utf-8" />
+    <title>SIDNFT | Web Tech Demo</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <main>
-      <!-- header -->
-      <div>
-        <h1>
-          <span class="px-2 py-2 rounded-2xl border-2 text-xl font-bold"
-            >SIDNFT</span
-          >
-          <span>Unity Web Tech Demo</span>
-        </h1>
-      </div>
-
-      <!-- main -->
-      <hr />
-      <div class="tw_section">
+      <div class="tw_main">
+        <!-- header -->
         <div>
-          <a
-            href="https://play.unity.com/en/games/c358842a-d246-4b01-bc3c-06ff7d066383/street-to-promote-v4"
-            target="_blank"
-          >
-            <img
-              class="tw_icon"
-              src="https://thisisone.github.io/street/app_icon.png"
-            />
-          </a>
+          <h1>SIDNFT | Web Tech Demo</h1>
         </div>
-        <div class="tw_icon_desc">
-          <h3>Street Project</h3>
-          <div class="mt-2">
-            - Unity Web Build<br />
 
-            It is a project created to promote the app. It can interact with
-            various objects
-          </div>
-          <div class="mt-4">
+        <!-- main -->
+        <hr />
+        <div class="tw_section">
+          <div class="tw_section_1">
             <a
-              class="tw_button"
               href="https://play.unity.com/en/games/c358842a-d246-4b01-bc3c-06ff7d066383/street-to-promote-v4"
               target="_blank"
             >
-              PLAY 🚀
+              <img
+                class="tw_icon"
+                src="https://thisisone.github.io/street/app_icon.png"
+              />
             </a>
           </div>
-        </div>
-      </div>
+          <div class="tw_section_2">
+            <h3>Street Project</h3>
+            <div class="mt-2">
+              - Unity Web Build<br />
 
-      <!-- footer -->
-      <hr />
-      <div class="tw_section">
-        <div>
-          <a
-            href="https://play.unity.com/en/games/ad4d2c84-f8bb-4c0e-9261-4703c1b9860d/sidnft-multiplay-tech-demo"
-            target="_blank"
-          >
-            <img
-              class="tw_icon"
-              src="https://thisisone.github.io/mp/app_icon.png"
-            />
-          </a>
-        </div>
-        <div class="tw_icon_desc">
-          <h3>Web Multiplay Tech Demo</h3>
-          <div class="mt-2">
-            - Unity Web Build<br />
-            - realtime online play<br />
-
-            A tech demo to see if online game development is possible on the<br />
-            I'm sure there's no one here. <br />
-            Make sure to open several pages to multi-play test
+              It is a project created to promote the app. It can interact with
+              various objects
+            </div>
+            <div class="mt-4">
+              <a
+                class="tw_button"
+                href="https://play.unity.com/en/games/c358842a-d246-4b01-bc3c-06ff7d066383/street-to-promote-v4"
+                target="_blank"
+              >
+                PLAY 🚀
+              </a>
+            </div>
           </div>
-          <div class="mt-4">
+        </div>
+
+        <!-- footer -->
+        <hr />
+        <div class="tw_section">
+          <div class="tw_section_1">
             <a
-              class="tw_button"
               href="https://play.unity.com/en/games/ad4d2c84-f8bb-4c0e-9261-4703c1b9860d/sidnft-multiplay-tech-demo"
               target="_blank"
             >
-              PLAY 🚀
+              <img
+                class="tw_icon"
+                src="https://thisisone.github.io/mp/app_icon.png"
+              />
             </a>
           </div>
-        </div>
-      </div>
+          <div class="tw_section_2">
+            <h3>Web Multiplay Tech Demo</h3>
+            <div class="mt-2">
+              - Unity Web Build<br />
+              - realtime online play<br />
 
-      <hr />
-      <div class="my-4 text-xs">
-        <div class="mt-2 flex items-center">
-          <div class="w-16 text-right">BLOG (en)</div>
-          <div class="ml-4">
-            <div class="px-4 rounded-full bg-indigo-600">
+              A tech demo to see if online game development is possible on
+              the<br />
+              I'm sure there's no one here. <br />
+              Make sure to open several pages to multi-play test
+            </div>
+            <div class="mt-4">
               <a
-                href="https://addforce1.blogspot.com/search/label/webgl"
+                class="tw_button"
+                href="https://play.unity.com/en/games/ad4d2c84-f8bb-4c0e-9261-4703c1b9860d/sidnft-multiplay-tech-demo"
                 target="_blank"
               >
-                LINK🔗
+                PLAY 🚀
               </a>
             </div>
           </div>
         </div>
-        <div class="mt-2 flex items-center">
-          <div class="w-16 text-right">BLOG (kr)</div>
-          <div class="ml-4">
-            <div class="px-4 rounded-full bg-indigo-600">
-              <a href="https://blog.sidnft.com/tag/webgl" target="_blank">
-                LINK🔗
-              </a>
+
+        <hr />
+        <div class="my-4 text-xs">
+          <div class="mt-2 flex items-center">
+            <div class="w-16 text-right">BLOG (en)</div>
+            <div class="ml-4">
+              <div class="px-4 rounded-full bg-indigo-600">
+                <a
+                  href="https://addforce1.blogspot.com/search/label/webgl"
+                  target="_blank"
+                >
+                  LINK🔗
+                </a>
+              </div>
             </div>
           </div>
-          <div class="mt-2 flex items-center"></div>
+          <div class="mt-2 flex items-center">
+            <div class="w-16 text-right">BLOG (kr)</div>
+            <div class="ml-4">
+              <div class="px-4 rounded-full bg-indigo-600">
+                <a href="https://blog.sidnft.com/tag/webgl" target="_blank">
+                  LINK🔗
+                </a>
+              </div>
+            </div>
+            <div class="mt-2 flex items-center"></div>
+          </div>
         </div>
       </div>
     </main>
